[gd_scene load_steps=5 format=3 uid="uid://bhpw04ttejme6"]

[ext_resource type="Script" uid="uid://br41uitbo5s03" path="res://Scripts/Popups/password_manager.gd" id="1_8p7gl"]
[ext_resource type="Texture2D" uid="uid://c2qws3vie5tnn" path="res://Textures/x.png" id="2_f74rj"]
[ext_resource type="Texture2D" uid="uid://ddfyoivtl6w2v" path="res://Textures/eye.png" id="2_hejow"]
[ext_resource type="Texture2D" uid="uid://drletyh4idx2i" path="res://Textures/x_2.png" id="3_j5rig"]

[node name="PasswordManager" type="CanvasLayer" groups=["password"]]
script = ExtResource("1_8p7gl")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 0
offset_left = 423.0
offset_top = 308.0
offset_right = 724.0
offset_bottom = 401.0
color = Color(0.10980392, 0.10980392, 0.10980392, 0.49019608)

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 0
offset_left = 420.0
offset_top = 305.0
offset_right = 727.001
offset_bottom = 429.0

[node name="Label" type="Label" parent="Control/Panel"]
layout_mode = 0
offset_left = -133.0
offset_top = 6.0
offset_right = 156.0
offset_bottom = 35.0
scale = Vector2(2, 2)
text = "Enter Password:"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Button" type="Button" parent="Control/Panel"]
layout_mode = 0
offset_top = 98.0
offset_right = 307.0
offset_bottom = 123.0

[node name="PasswordBox" type="LineEdit" parent="Control/Panel"]
layout_mode = 0
offset_left = 7.0000114
offset_top = 48.000008
offset_right = 425.33337
offset_bottom = 123.00001
scale = Vector2(0.6, 0.6)
theme_override_font_sizes/font_size = 48
placeholder_text = "password"
secret = true

[node name="SecretButton" type="TextureButton" parent="Control/Panel"]
layout_mode = 0
offset_left = 262.0
offset_top = 50.0
offset_right = 278.0
offset_bottom = 66.0
scale = Vector2(2.5, 2.5)
texture_normal = ExtResource("2_hejow")

[node name="XButton" type="TextureButton" parent="Control/Panel"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 20.0
offset_bottom = 20.0
texture_normal = ExtResource("3_j5rig")

[node name="WrongPassword" type="TextureRect" parent="Control"]
visible = false
layout_mode = 0
offset_left = 550.0
offset_top = 432.0
offset_right = 590.0
offset_bottom = 472.0
texture = ExtResource("2_f74rj")

[connection signal="pressed" from="Control/Panel/Button" to="." method="_on_button_pressed"]
[connection signal="text_submitted" from="Control/Panel/PasswordBox" to="." method="_on_password_box_text_submitted"]
[connection signal="pressed" from="Control/Panel/SecretButton" to="." method="_on_secret_button_pressed"]
[connection signal="pressed" from="Control/Panel/XButton" to="." method="_on_x_button_pressed"]
